--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "shopigo/magento2-extension-swiss-post",
   "description": "Magento 2 Swiss Post extension by Shopigo",
   "require": {
-    "php": "^7.0",
+    "php": "^7.4 || ~8.1.0",
     "magento/module-quote": "*",
     "magento/module-shipping": "*",
     "magento/framework": "*"
