--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
   "name": "sapientpro/magento2-extension-swiss-post",
   "description": "Magento 2 Swiss Post extension by Shopigo",
   "require": {
-    "php": "^7.4 || ~8.1.0",
+    "php": ">=7.4",
     "magento/module-quote": "*",
     "magento/module-shipping": "*",
     "magento/framework": "*"
   },
   "type": "magento2-module",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "license": [
     "OSL-3.0",
     "AFL-3.0"
